# towel

./: .gitignore  README.md  pyproject.toml
docs/examples/: execute_da_plan.py  function_caller.py  news_reader.py  paper_summarizer.py  space_trip.py  thinking.py  white_paperer.py  wrap_it.py
docs/examples/reference/: README.md  chatbot-with-multiple-tools.py
docs/examples/system_two/: planer.py  reasoner.py  system_two_thinker.py
hyperland/: README.md  TODO.md  customer_support.py  daplan.py  execute_da_plan.py  eyes.py  function_caller.py  make_da_plan.py  paper_summarizer.py  thinking.py
hyperland/reference/: chatbot-with-multiple-tools.py
hyperland/system_two/: planer.py  reasoner.py  system_two_thinker.py
src/: towel.py
src/towel/: __init__.py  base.py  guide.py  thinker.py  tools.py
src/towel/brain/: __init__.py  base.py  claude.py  ollama.py
src/towel/brain/tools/: fun.py
src/towel/brain/tools/prompt/: generic.py
src/towel/prompt/: __init__  __init__.py  plan.py
src/towel/toolbox/: web.py
src/towel/type/: __init__.py  plan.py
